Update last deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://www.thairlananjos.com/poke-search-react/",
+  "homepage": "http://www.thairlananjos.com/poke-search-react/src/",  
   "name": "poke-search-react",
   "version": "0.1.0",
   "private": true,
